fix: fixed CourseCard spacing

--- a/frontend/src/components/CourseCard/CourseCard.module.scss
+++ b/frontend/src/components/CourseCard/CourseCard.module.scss
@@ -7,6 +7,7 @@
   border-radius: 24px;
   width: 100%;
   max-width: 1280px;
+	padding-block: 20px;
 
   &:hover {
     box-shadow: 8px 8px 30px 6px rgba(214, 212, 209, 0.6);
